tests/res/match/error_dup_key.say
// A shape matcher cannot repeat a key.
say d = { a: 1 };
if d ~ { a: _, a: _ } { print("no"); } // error: Duplicate key in a shape matcher
